--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   agora_uikit: ^1.0.0
+  agora_rtc_engine: 
+  permission_handler: 
+
+
 
 dev_dependencies:
   flutter_test:
